nextcloud/ss-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: static-server

spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: static-server
  template:
    metadata:
      labels:
        app: static-server
    spec:
      enableServiceLinks: false
      nodeSelector:
        kubernetes.io/hostname: moto-a1-3

      volumes:
        - name: data
          hostPath:
            path: /srv/nextcloud/data

      containers:
        - name: static-server
          image: caddy:2
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: /usr/share/caddy/apps/files_pdfviewer
              name: data
              subPath: apps/files_pdfviewer
