nextcloud/stateful-set.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: nextcloud

spec:
  serviceName: nextcloud
  podManagementPolicy: Parallel
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      enableServiceLinks: false
      containers:
        - name: nextcloud
          image: nextcloud
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: /var/www/html
              name: data
      volumes:
        - name: data
          hostPath:
            path: /srv/nextcloud/data
      nodeSelector:
        kubernetes.io/hostname: moto-a1-3
