nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud

spec:
  type: ClusterIP
  ports:
    - targetPort: http
      name: http
      port: 80
  selector:
    app: nextcloud
