nextcloud/ss-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-server

spec:
  type: ClusterIP
  ports:
    - targetPort: http
      name: http
      port: 80
  selector:
    app: static-server
