nextcloud/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud

spec:
  entryPoints:
    - websecure
  tls:
    secretName: nextcloud-tls
  routes:
    - kind: Rule
      match: Host(`drive.toki317.dev`)
      services:
        - namespace: nextcloud
          kind: Service
          name: nextcloud
          port: http
          scheme: http

    - kind: Rule
      match: Host(`drive.toki317.dev`) && PathRegexp(`^/apps/files_pdfviewer/.+\.bcmap$`)
      services:
        - namespace: nextcloud
          kind: Service
          name: static-server
          port: http
          scheme: http
